--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@ body {
     border-radius: 10px;
     background-color: white;
     font-size: 18px;
+    box-shadow: 0px 10px 10px;
 }
 
 .login {
